<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/text_view_title_register"
        style="@style/Widget.TaskHero.TextView"
        android:text="@string/register_screen_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image_view_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="@dimen/touch_target_maximum_size" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/photo_image_content_desc"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_a_photo"
        app:backgroundTint="?attr/colorSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title_register"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_name"
        style="@style/Widget.TaskHero.TextInputLayout"
        android:hint="@string/common_label_name"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_email_register"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/image_view_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email_register"
        style="@style/Widget.TaskHero.TextInputLayout"
        android:hint="@string/common_label_email"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password_register"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password_register"
        style="@style/Widget.TaskHero.TextInputLayout"
        android:hint="@string/common_label_password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        style="@style/Widget.TaskHero.Button"
        android:text="@string/register_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password_register"
        app:layout_constraintWidth_max="@dimen/button_touch_target_maximum_size" />

</androidx.constraintlayout.widget.ConstraintLayout>