<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/text_view_title_login"
        style="@style/Widget.TaskHero.TextView"
        android:text="@string/login_screen_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_email_login"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="@dimen/touch_target_maximum_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email_login"
        style="@style/Widget.TaskHero.TextInputLayout"
        android:hint="@string/common_label_email"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout_password_login"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_view_title_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password_login"
        style="@style/Widget.TaskHero.TextInputLayout"
        android:hint="@string/common_label_password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.TaskHero.Button"
        android:contentDescription="@string/login_button_content_description"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toTopOf="@+id/text_view_go_to_register"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password_login"
        app:layout_constraintWidth_max="@dimen/button_touch_target_maximum_size"/>

    <TextView
        android:id="@+id/text_view_go_to_register"
        style="@style/Widget.TaskHero.TextView"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_navigation_to_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintWidth_max="@dimen/touch_target_maximum_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>